--- a/style.css
+++ b/style.css
@@ -624,10 +624,16 @@ color: black;
   font-size: 16px;
   cursor: pointer;
   margin-top: 10px;
+  text-decoration: none;
 }
 
 .experience section button:hover {
-  background-color: rgb(255, 82, 19);
+  background-color: black;
+  color: white;
+}
+.experience section a {
+  text-decoration: none;
+  color: white;
 }
 
 
